# multi-agent-coding-system

./: MCP_INTEGRATION_ASSESSMENT.md  example_run_task.py  mcp_server_example.py  pyproject.toml
examples/orca_config/: architecture.md  project.yaml  vocabulary.yaml
examples/orca_config/patterns/: feature_mixin.md  signal_mixin.md
src/multi_agent_coding_system/agents/: subagent.py
src/multi_agent_coding_system/agents/actions/: permissions.py
src/multi_agent_coding_system/agents/actions/entities/: actions.py  task.py
src/multi_agent_coding_system/agents/actions/parsing/: action_handler.py
src/multi_agent_coding_system/agents/env_interaction/: __init__.py  local_executor.py
src/multi_agent_coding_system/agents/system_msgs/: system_msg_loader.py
src/multi_agent_coding_system/agents/system_msgs/md_files/: code_reviewer_sys_msg.md  orchestrator_sys_msg.md  test_writer_sys_msg.md
src/multi_agent_coding_system/config/: __init__.py  model_config.py  project_context.py
src/multi_agent_coding_system/orca_init/: __init__.py  __main__.py  analyzer.py  cli.py  detector.py  generator.py  interactive.py
